--- a/www/assets/css/movies.css
+++ b/www/assets/css/movies.css
@@ -99,6 +99,7 @@ a.card:active, a.card:focus {
   border-radius: 0 10px;
   cursor: pointer;
   font-size: 1.2em;
+  padding-bottom: 7px;
 }
 
 #movies .card-container span.badge:hover, #movies .card-container span.badge.selected {
@@ -114,8 +115,8 @@ a.card:active, a.card:focus {
   padding: 0.5rem;
 }
 
-#movies h5 {
-  margin: 0 10px 0.5rem 0;
+#movies h5, #movies h6 {
+  margin: 0 25px 0.5rem 0;
   color: white;
 }
 
